--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
             </div>
 
 <!-- Current Train Schedule -->
-            <div class="row">
+            <div class="row border border-secondary rounded-top p-3 bg-light">
+                <div class="col-12">
+                    <h4>Current Train Schedule</h4>
+                </div>
+            </div>
+            <div class="row border border-secondary rounded-bottom">
                 <div class="col-12">
                     <table class="table table-hover">
                         <thead>
@@ -49,6 +54,8 @@
                 </div>
             </div>
 
+<!-- Submission Form -->
+            
 
         </div>
     </body>
