--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Title Jumbotron -->
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 p-0">
                     <div class="jumbotron jumbotron-fluid">
                         <div class="container">
                             <h1 class="display-4">Look at All These Train Schedules</h1>
@@ -26,12 +26,12 @@
 <!-- Current Train Schedule -->
             <div class="row border border-secondary rounded-top p-3 bg-light">
                 <div class="col-12">
-                    <h4>Current Train Schedule</h4>
+                    <h4 class="border-bottom border-secondary pb-3">Current Train Schedule</h4>
                 </div>
-            </div>
-            <div class="row border border-secondary rounded-bottom">
+            <!-- </div>
+            <div class="row border border-secondary rounded-bottom"> -->
                 <div class="col-12">
-                    <table class="table table-hover">
+                    <table class="table table-striped">
                         <thead>
                             <tr>
                                 <th scope="col">Train Name</th>
@@ -55,8 +55,39 @@
             </div>
 
 <!-- Submission Form -->
-            
-
+            <div class="row border border-secondary rounded-top p-3 pb-4 mt-3 bg-light">
+                <div class="col-12">
+                    <h4 class="border-bottom border-secondary pb-3">Add Train</h4>
+                </div>
+                <div class="col-12">
+                <form>
+                    <div class="form-row">
+                        <div class="col-12">
+                            <label for="validationName">Train Name</label>
+                            <input type="text" class="form-control" id="trainName" required>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col-12">
+                            <label for="validationDestination">Destination</label>
+                            <input type="text" class="form-control" id="destination" required>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col-12">
+                            <label for="validationFirstTrainTime">First Train Time (HH:mm - Military Time)</label>
+                            <input type="text" class="form-control" id="firstTrainTime" required>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col-12">
+                            <label for="validationFrequency">Frequency (min)</label>
+                            <input type="text" class="form-control" id="frequency" required>
+                        </div>
+                    </div>
+                </form>
+                </div>
+            </div>
         </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
