--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <div class="container">
+        <div class="container mb-4">
 
 <!-- Title Jumbotron -->
             <div class="row">
@@ -28,8 +28,7 @@
                 <div class="col-12">
                     <h4 class="border-bottom border-secondary pb-3">Current Train Schedule</h4>
                 </div>
-            <!-- </div>
-            <div class="row border border-secondary rounded-bottom"> -->
+
                 <div class="col-12">
                     <table class="table table-striped">
                         <thead>
@@ -59,33 +58,40 @@
                 <div class="col-12">
                     <h4 class="border-bottom border-secondary pb-3">Add Train</h4>
                 </div>
+
                 <div class="col-12">
-                <form>
-                    <div class="form-row">
+                    <form>
+                        <div class="form-row">
+                            <div class="col-12">
+                                <label for="validationName">Train Name</label>
+                                <input type="text" class="form-control" id="trainName" required>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-12">
+                                <label for="validationDestination">Destination</label>
+                                <input type="text" class="form-control" id="destination" required>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-12">
+                                <label for="validationFirstTrainTime">First Train Time (HH:mm - Military Time)</label>
+                                <input type="text" class="form-control" id="firstTrainTime" required>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-12">
+                                <label for="validationFrequency">Frequency (min)</label>
+                                <input type="text" class="form-control" id="frequency" required>
+                            </div>
+                        </div>
+                    </form>
+
+                    <div class="row mt-3">
                         <div class="col-12">
-                            <label for="validationName">Train Name</label>
-                            <input type="text" class="form-control" id="trainName" required>
+                            <button type="button" class="btn btn-secondary">Submit</button>
                         </div>
                     </div>
-                    <div class="form-row">
-                        <div class="col-12">
-                            <label for="validationDestination">Destination</label>
-                            <input type="text" class="form-control" id="destination" required>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="col-12">
-                            <label for="validationFirstTrainTime">First Train Time (HH:mm - Military Time)</label>
-                            <input type="text" class="form-control" id="firstTrainTime" required>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="col-12">
-                            <label for="validationFrequency">Frequency (min)</label>
-                            <input type="text" class="form-control" id="frequency" required>
-                        </div>
-                    </div>
-                </form>
                 </div>
             </div>
         </div>
