--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
 
                 <div class="col-12">
                     <form>
-                        <div class="form-row">
+                        <div class="form-row mb-2">
                             <div class="col-12">
                                 <label for="validationName">Train Name</label>
                                 <input type="text" class="form-control" id="trainName" required>
                             </div>
                         </div>
-                        <div class="form-row">
+                        <div class="form-row mb-2">
                             <div class="col-12">
                                 <label for="validationDestination">Destination</label>
                                 <input type="text" class="form-control" id="destination" required>
                             </div>
                         </div>
-                        <div class="form-row">
+                        <div class="form-row mb-2">
                             <div class="col-12">
                                 <label for="validationFirstTrainTime">First Train Time (HH:mm - Military Time)</label>
                                 <input type="text" class="form-control" id="firstTrainTime" required>
