adjusted jumbotron padding and space bw table and forms

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-12 p-0">
                     <div class="jumbotron jumbotron-fluid">
-                        <div class="container">
+                        <div class="container p-5">
                             <h1 class="display-4">Look at All These Train Schedules</h1>
                             <p class="lead">Dear Admin: please submit the name of your train, along with its destination, first train time, and frequency.</p>
                         </div>
@@ -54,7 +54,7 @@
             </div>
 
 <!-- Submission Form -->
-            <div class="row border border-secondary rounded-top p-3 pb-4 mt-3 bg-light">
+            <div class="row border border-secondary rounded-top p-3 pb-4 mt-4 bg-light">
                 <div class="col-12">
                     <h4 class="border-bottom border-secondary pb-3">Add Train</h4>
                 </div>
