added firebase and basic database writing functionality

--- a/index.html
+++ b/index.html
@@ -64,25 +64,25 @@
                         <div class="form-row mb-2">
                             <div class="col-12">
                                 <label for="validationName">Train Name</label>
-                                <input type="text" class="form-control" id="trainName" required>
+                                <input type="text" class="form-control" id="trainNameInput" required>
                             </div>
                         </div>
                         <div class="form-row mb-2">
                             <div class="col-12">
                                 <label for="validationDestination">Destination</label>
-                                <input type="text" class="form-control" id="destination" required>
+                                <input type="text" class="form-control" id="destinationInput" required>
                             </div>
                         </div>
                         <div class="form-row mb-2">
                             <div class="col-12">
                                 <label for="validationFirstTrainTime">First Train Time (HH:mm - Military Time)</label>
-                                <input type="text" class="form-control" id="firstTrainTime" required>
+                                <input type="text" class="form-control" id="firstTrainTimeInput" required>
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="col-12">
                                 <label for="validationFrequency">Frequency (min)</label>
-                                <input type="text" class="form-control" id="frequency" required>
+                                <input type="text" class="form-control" id="frequencyInput" required>
                             </div>
                         </div>
                     </form>
@@ -95,10 +95,14 @@
                 </div>
             </div>
         </div>
-    </body>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
+
+        <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-database.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script type="text/javascript" src="assets/javascript/app.js"></script>
+    </body>  
 </html>
