--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
         </div>
         
-        <script src="moment.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-database.js"></script>
