added readme text and removed placeholder table entry from html

--- a/index.html
+++ b/index.html
@@ -40,15 +40,7 @@
                                 <th scope="col">Minutes Away</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>Trenton Express</td>
-                                <td>Trenton</td>
-                                <td>25</td>
-                                <td>05:35 PM</td>
-                                <td>10</td>
-                            </tr>
-                        </tbody>
+                        <tbody></tbody>
                     </table>
                 </div>
             </div>
